test/sema/typeck/function/call-wrong-params.dora
fn g() {}
fn f() { g(1i32); }
